--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,10 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+  ],
+  "files.associations": {
+    "iostream": "cpp",
+    "ostream": "cpp",
+    "span": "cpp"
+  }
 }
